--- a/style.css
+++ b/style.css
@@ -80,7 +80,8 @@ header {
     header nav a {
       padding: .2rem 1rem;
       color: white;
-      font-family: sans-serif; }
+      font-family: sans-serif;
+      cursor: pointer; }
 
 section {
   position: relative;
@@ -570,3 +571,55 @@ section {
         border-radius: 5px;
         box-shadow: 0 0.1 0.1px gray;
         font-size: 1.2rem; }
+
+.resume:not(.active) {
+  display: none; }
+
+.resume-pdf {
+  position: absolute;
+  width: 100vw;
+  height: 100vh;
+  top: 0;
+  left: 0; }
+
+.print-button, .close-resume {
+  height: 5rem;
+  width: 5rem;
+  background: #fff;
+  position: fixed;
+  top: 5rem;
+  left: 5rem;
+  z-index: 100;
+  padding: 1rem;
+  border-radius: 10px;
+  box-shadow: 0 0 0.2rem black; }
+  .print-button img, .close-resume img {
+    height: 100%; }
+  @media only screen and (max-width: 1300px) {
+    .print-button, .close-resume {
+      height: 3rem;
+      width: 3rem;
+      padding: 0; } }
+  @media only screen and (max-width: 800px) {
+    .print-button, .close-resume {
+      left: 2rem;
+      top: 3rem; } }
+  @media only screen and (max-width: 500px) {
+    .print-button, .close-resume {
+      height: 2rem;
+      width: 2rem;
+      left: 2rem;
+      top: 3rem; } }
+
+.close-resume {
+  right: 3rem;
+  top: 4rem;
+  left: auto;
+  box-shadow: none;
+  padding: 0;
+  height: 2rem;
+  width: 2rem; }
+  @media only screen and (max-width: 500px) {
+    .close-resume {
+      top: 3rem;
+      right: 2rem; } }
