--- a/style.css
+++ b/style.css
@@ -120,7 +120,8 @@ section {
       width: 180px;
       height: 180px; }
       section.banner .headshot img {
-        transform: translateX(-0.6rem); }
+        width: 100%;
+        transform: translateX(0rem) scale(1.3); }
     section.banner .personal {
       display: flex;
       flex-direction: column;
@@ -152,7 +153,7 @@ section {
       display: flex;
       padding: 2rem 3rem;
       column-gap: 3rem; }
-      @media only screen and (max-width: 900px) {
+      @media only screen and (max-width: 1200px) {
         section.about .section-wrapper {
           flex-direction: column;
           row-gap: 3rem; } }
@@ -180,9 +181,12 @@ section {
       section.about .section-wrapper .about-desc {
         padding: 3rem 4rem; }
         section.about .section-wrapper .about-desc p {
+          font-size: 1rem;
           font-family: sans-serif;
-          line-height: 2.3;
+          line-height: 1.6;
           margin-bottom: 1.5rem; }
+        section.about .section-wrapper .about-desc span {
+          text-decoration: line-through; }
         @media only screen and (max-width: 600px) {
           section.about .section-wrapper .about-desc {
             font-size: .8rem;
@@ -190,7 +194,11 @@ section {
       section.about .section-wrapper .about-skills {
         font-family: serif;
         font-size: 1rem;
-        flex-basis: 40%; }
+        flex-basis: 40%;
+        align-self: start; }
+        @media only screen and (max-width: 1200px) {
+          section.about .section-wrapper .about-skills {
+            align-self: stretch; } }
         section.about .section-wrapper .about-skills p {
           text-decoration: underline;
           margin: .5rem;
@@ -203,13 +211,13 @@ section {
           margin: .3rem; }
         section.about .section-wrapper .about-skills .skills div {
           background-color: #eee;
-          margin-bottom: 1rem;
+          margin-bottom: 3rem;
           box-shadow: 0 0 0.1rem gray;
           padding: .5rem 1rem; }
-        @media only screen and (max-width: 900px) {
+        @media only screen and (max-width: 1200px) {
           section.about .section-wrapper .about-skills .skills {
             display: flex;
-            justify-content: space-between; }
+            justify-content: space-evenly; }
             section.about .section-wrapper .about-skills .skills p {
               text-align: center; } }
         @media only screen and (max-width: 700px) {
@@ -354,12 +362,12 @@ section {
         @media only screen and (max-width: 400px) {
           section.projects .project-card .buttons {
             justify-content: space-between; }
-            section.projects .project-card .buttons button {
+            section.projects .project-card .buttons button, section.projects .project-card .buttons a {
               font-size: 1rem; } }
         @media only screen and (max-width: 500px) {
           section.projects .project-card .buttons {
             padding: 0; }
-            section.projects .project-card .buttons button {
+            section.projects .project-card .buttons button, section.projects .project-card .buttons a {
               font-size: 1rem; } }
       section.projects .project-card .details {
         display: flex;
@@ -576,7 +584,7 @@ section {
   display: none; }
 
 .resume-pdf {
-  position: absolute;
+  position: fixed;
   width: 100vw;
   height: 100vh;
   top: 0;
