--- a/style.css
+++ b/style.css
@@ -156,10 +156,12 @@ section {
       @media only screen and (max-width: 1200px) {
         section.about .section-wrapper {
           flex-direction: column;
+          grid-row-gap: 3rem;
           row-gap: 3rem; } }
       @media only screen and (max-width: 700px) {
         section.about .section-wrapper {
           padding: 1rem;
+          grid-row-gap: 1rem;
           row-gap: 1rem; } }
       section.about .section-wrapper h2 {
         font-family: serif;
@@ -179,6 +181,8 @@ section {
         box-shadow: 0 0 0.1rem gray;
         border-radius: 5px; }
       section.about .section-wrapper .about-desc {
+        height: auto;
+        position: relative;
         padding: 3rem 4rem; }
         section.about .section-wrapper .about-desc p {
           font-size: 1rem;
@@ -189,8 +193,50 @@ section {
           text-decoration: line-through; }
         @media only screen and (max-width: 600px) {
           section.about .section-wrapper .about-desc {
-            font-size: .8rem;
-            padding: 1rem 2rem !important; } }
+            padding: 1rem 2rem !important; }
+            section.about .section-wrapper .about-desc p {
+              font-size: .8rem !important; } }
+        section.about .section-wrapper .about-desc .read-story {
+          position: absolute;
+          font-size: 1rem !important;
+          font-family: sans-serif;
+          font-weight: 400;
+          color: darkblue;
+          text-align: center;
+          display: flex;
+          justify-content: center;
+          width: 100%;
+          left: 0;
+          margin: 0 auto;
+          bottom: .5rem;
+          z-index: 50; }
+          @media only screen and (min-width: 1201px) {
+            section.about .section-wrapper .about-desc .read-story {
+              display: none; } }
+          @media only screen and (min-width: 601px) {
+            section.about .section-wrapper .about-desc .read-story {
+              bottom: 2rem; } }
+          section.about .section-wrapper .about-desc .read-story:not(.active) {
+            display: none; }
+        section.about .section-wrapper .about-desc .extra-story {
+          position: relative;
+          max-height: 80px;
+          overflow: hidden;
+          transition: all .5s; }
+          @media only screen and (min-width: 1201px) {
+            section.about .section-wrapper .about-desc .extra-story {
+              height: auto !important; }
+              section.about .section-wrapper .about-desc .extra-story .cover {
+                display: none; } }
+          section.about .section-wrapper .about-desc .extra-story.active {
+            max-height: 2000px; }
+            section.about .section-wrapper .about-desc .extra-story.active .cover {
+              display: none; }
+          section.about .section-wrapper .about-desc .extra-story .cover {
+            position: absolute;
+            width: 100%;
+            height: 100%;
+            background-image: linear-gradient(to bottom, transparent, white 55%); }
       section.about .section-wrapper .about-skills {
         font-family: serif;
         font-size: 1rem;
