--- a/style.css
+++ b/style.css
@@ -209,7 +209,8 @@ section {
           left: 0;
           margin: 0 auto;
           bottom: .5rem;
-          z-index: 50; }
+          z-index: 50;
+          cursor: pointer; }
           @media only screen and (min-width: 1201px) {
             section.about .section-wrapper .about-desc .read-story {
               display: none; } }
