--- a/main.scss
+++ b/main.scss
@@ -292,6 +292,7 @@ section {
                     margin: 0 auto;
                     bottom: .5rem;
                     z-index: 50;
+                    cursor: pointer;
 
                     @media only screen and (min-width: 1201px) {
                         display: none;
