--- a/main.scss
+++ b/main.scss
@@ -252,7 +252,7 @@ section {
                 padding: 1rem 2rem;
                 box-shadow: 0 0 0.1rem gray;
                 border-radius: 5px;
-                // margin-bottom: 1rem;
+                margin-bottom: 1rem;
             }
 
             & .about-desc {
