--- a/style.css
+++ b/style.css
@@ -179,7 +179,8 @@ section {
         background-color: white;
         padding: 1rem 2rem;
         box-shadow: 0 0 0.1rem gray;
-        border-radius: 5px; }
+        border-radius: 5px;
+        margin-bottom: 1rem; }
       section.about .section-wrapper .about-desc {
         height: auto;
         position: relative;
