--- a/main.scss
+++ b/main.scss
@@ -313,7 +313,7 @@ section {
                     overflow: hidden;
                     transition: all .5s;
                     @media only screen and (min-width: 1201px) {
-                        height: auto !important;
+                        max-height: 2000px;
                         .cover {
                             display: none;
                         }
