--- a/main.scss
+++ b/main.scss
@@ -291,7 +291,7 @@ section {
                     left: 0;
                     margin: 0 auto;
                     bottom: .5rem;
-                    z-index: 50;
+                    // z-index: 50;
                     cursor: pointer;
 
                     @media only screen and (min-width: 1201px) {
